--- a/server/package.json
+++ b/server/package.json
@@ -13,6 +13,10 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.1",
     "express": "^4.17.1",
+    "express-session": "^1.17.3",
+    "flash": "^1.1.0",
+    "passport": "^0.6.0",
+    "passport-local": "^1.0.0",
     "pg": "^8.7.3"
   }
 }
