--- a/server/package.json
+++ b/server/package.json
@@ -17,6 +17,7 @@
     "flash": "^1.1.0",
     "passport": "^0.6.0",
     "passport-local": "^1.0.0",
-    "pg": "^8.7.3"
+    "pg": "^8.7.3",
+    "uuid": "^8.3.2"
   }
 }
